--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,39 @@
+amqp==5.3.1
+asgiref==3.10.0
+async-timeout==5.0.1
+attrs==25.4.0
+billiard==4.2.2
+celery==5.3.4
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
 Django==4.2.7
+django-cors-headers==4.3.1
+django-redis==5.4.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
-psycopg2-binary==2.9.9
-redis==5.0.1
-django-redis==5.4.0
-celery==5.3.4
-python-decouple==3.8
-django-cors-headers==4.3.1
 drf-spectacular==0.26.5
+inflection==0.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+kombu==5.6.0
+packaging==25.0
+prompt-toolkit==3.0.52
+psycopg2-binary==2.9.9
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+pytz==2025.2
+pyyaml==6.0.3
+redis==4.6.0
+referencing==0.36.2
+rpds-py==0.27.1
+six==1.17.0
+sqlparse==0.5.3
+typing-extensions==4.15.0
+tzdata==2025.2
+uritemplate==4.2.0
+vine==5.1.0
+wcwidth==0.2.14
